[gd_scene load_steps=37 format=2]

[ext_resource path="res://Game/Button_attack.gd" type="Script" id=1]
[ext_resource path="res://Game/Button_Second.gd" type="Script" id=2]
[ext_resource path="res://Game/Button_Third.gd" type="Script" id=3]
[ext_resource path="res://Game/CanvasLayer.gd" type="Script" id=4]
[ext_resource path="res://Game/Heroe.gd" type="Script" id=5]
[ext_resource path="res://qn8kKPkSkEQZWgQvA51oyOlYDY7q2bpXbJ3vHAoDKF0LAEPf76eC6TI3XxkAOgtpDiPgueiaHTQfywcbq8OV_4R4.jpg" type="Texture" id=6]
[ext_resource path="res://Game/value_of_HP.gd" type="Script" id=7]
[ext_resource path="res://Game/Weapon.gd" type="Script" id=8]
[ext_resource path="res://Game/Hedgehod_spawn.gd" type="Script" id=9]
[ext_resource path="res://Game/Weapon_Area.gd" type="Script" id=10]
[ext_resource path="res://Game/Area_For_Jumping.gd" type="Script" id=11]
[ext_resource path="res://Game/Buttons_Of_Heroe.gd" type="Script" id=12]
[ext_resource path="res://Game/Arrow_Amount.gd" type="Script" id=13]
[ext_resource path="res://imgonline-com-ua-Resize-zWK4nj8RNwgAsbVb.png" type="Texture" id=14]
[ext_resource path="res://Anims/гл. гр/anim-1-2.png" type="Texture" id=15]
[ext_resource path="res://Anims/гл. гр/anim-1-1.png" type="Texture" id=17]
[ext_resource path="res://Anims/гл. гр/anim-1-3.png" type="Texture" id=18]
[ext_resource path="res://Anims/гл. гр/anim-1-7.png" type="Texture" id=19]
[ext_resource path="res://Anims/гл. гр/anim-1-6.png" type="Texture" id=20]
[ext_resource path="res://Anims/гл. гр/anim-1-5.png" type="Texture" id=21]
[ext_resource path="res://Anims/гл. гр/anim-1-4.png" type="Texture" id=22]
[ext_resource path="res://Game/Camera_Of_Heroe.gd" type="Script" id=23]

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array( 0, 0, -8, 0, -8, 22, -1, 22, -1, 14, 0, 14, 0, 22, 6, 22, 6, 0 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "щгп"
length = 0.27
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.22 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( 0, -8, -11, -8, -11, 22, -1, 22, -1, 13, 0, 13, 0, 22, 8, 22, 8, -8 ), PoolVector2Array( 0, -8, -11, -8, -11, 13, -1, 13, -1, 13, 0, 13, 0, 22, 8, 22, 8, -8 ), PoolVector2Array( 0, -8, -11, -8, -11, 22, -1, 22, -1, 13, 0, 13, 0, 13, 8, 13, 8, -8 ), PoolVector2Array( 0, -8, -11, -8, -11, 22, -1, 22, -1, 13, 0, 13, 0, 22, 8, 22, 8, -8 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "щгп_п"
length = 0.3
step = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.18, 0.26 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ PoolVector2Array( 0, -8, -11, -8, -11.0001, 21.9433, -1.50012, 21.9433, -1.50012, 12.8867, 0.399902, 12.8867, 0.399902, 21.9433, 7.99988, 21.9433, 8, -8 ), PoolVector2Array( 0, -8, -11, -8, -11.0001, 21.9433, -1.50012, 21.9433, -1.50012, 12.8867, 0.399902, 12.8867, 0.399902, 12.8867, 7.99988, 12.8867, 8, -8 ), PoolVector2Array( 0, -8, -11, -8, -11.0001, 12.8867, -1.50012, 12.8867, -1.50012, 12.8867, 0.399902, 12.8867, 0.399902, 21.9433, 7.99988, 21.9433, 8, -8 ), PoolVector2Array( 0, -8, -11, -8, -11.0001, 21.9433, -1.50012, 21.9433, -1.50012, 12.8867, 0.399902, 12.8867, 0.399902, 21.9433, 7.99988, 21.9433, 8, -8 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 147.5, 154 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 15 ), ExtResource( 18 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 19 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "injured",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 36.0903, 35.086 )

[sub_resource type="Animation" id=7]
resource_name = "Attack_Animation"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4.03247, 42.2535 ), Vector2( -4.03247, 42.2535 ), Vector2( -4.03247, 42.2535 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sword:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -180.0, -89.9999, -180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2.01587, 58.3501 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sword:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "Bow_Animation"
tracks/0/type = "value"
tracks/0/path = NodePath("..:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 139.113, 58.35 ), Vector2( 139.113, 58.35 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 139.113, 58.35 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="SpatialMaterial" id=3]
render_priority = 1

[sub_resource type="CanvasItemMaterial" id=11]
next_pass = SubResource( 3 )
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Theme" id=12]

[sub_resource type="ShaderMaterial" id=13]

[node name="Heroe" type="KinematicBody2D"]
position = Vector2( 444, 370 )
z_index = 3
collision_layer = 31
collision_mask = 31
script = ExtResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -1, 1 )
scale = Vector2( 0.526316, 1.10417 )
polygon = PoolVector2Array( 0, -8, -11, -8, -11, 22, -1, 22, -1, 13, 0, 13, 0, 22, 8, 22, 8, -8 )
one_way_collision_margin = 12.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CollisionPolygon2D"]
reset_on_save = false
anims/RESET = SubResource( 17 )
"anims/щгп" = SubResource( 18 )
"anims/щгп_п" = SubResource( 19 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 8, 471 )
scale = Vector2( 1.00781, 1.00781 )
normal = ExtResource( 14 )

[node name="Area_For_Jumping" type="Area2D" parent="CanvasLayer"]
position = Vector2( 29, 487 )
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Area_For_Jumping"]
position = Vector2( 42.5, -120 )
shape = SubResource( 4 )

[node name="Timer_Of_Hedgehod" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Icon" type="AnimatedSprite" parent="."]
position = Vector2( -1.11304, 8.65002 )
scale = Vector2( 0.207674, 0.208092 )
z_index = 1
frames = SubResource( 16 )
animation = "idle"

[node name="Weapon" type="Area2D" parent="."]
position = Vector2( 139.113, 58.35 )
scale = Vector2( 0.496, 0.497 )
z_index = 3
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon"]
position = Vector2( -22.1774, 2.01202 )
shape = SubResource( 6 )
disabled = true
script = ExtResource( 10 )

[node name="Sword" type="Sprite" parent="Weapon"]
position = Vector2( -2.01587, 58.3501 )
rotation = -3.14159
scale = Vector2( 0.60048, 0.62855 )
offset = Vector2( 10, 218.745 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Weapon"]
anims/Attack_Animation = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="Bow_Animation" type="AnimationPlayer" parent="Weapon/AnimationPlayer"]
anims/Bow_Animation = SubResource( 9 )
anims/RESET = SubResource( 10 )

[node name="Position2D" type="Position2D" parent="Weapon"]
position = Vector2( -60.484, -68.4103 )

[node name="Hedgehod" type="Position2D" parent="Weapon"]
position = Vector2( 639.113, 321.932 )
script = ExtResource( 9 )

[node name="Sword_Position" type="Position2D" parent="Weapon"]
position = Vector2( 562.5, 384.306 )

[node name="Timer_Of_Sheld" type="Timer" parent="Weapon"]
wait_time = 6.0
one_shot = true

[node name="Timer_Of_Stone" type="Timer" parent="Weapon/Timer_Of_Sheld"]
wait_time = 6.0
one_shot = true

[node name="Timer_Of_Spell" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HP_Heroe" type="TextureProgress" parent="."]
margin_left = -20.0
margin_top = -27.0
margin_right = 125.0
margin_bottom = -6.0
rect_scale = Vector2( 0.25, 0.25 )
max_value = 150.0
value = 150.0
texture_progress = ExtResource( 6 )
tint_progress = Color( 1, 0, 0, 1 )
nine_patch_stretch = true

[node name="Timer_Of_HP" type="Timer" parent="HP_Heroe"]
autostart = true

[node name="Mana_Heroe" type="TextureProgress" parent="."]
margin_left = -20.0
margin_top = -22.0
margin_right = 125.0
margin_bottom = -1.0
rect_scale = Vector2( 0.25, 0.25 )
max_value = 550.0
value = 550.0
texture_progress = ExtResource( 6 )
tint_progress = Color( 0, 0.133333, 1, 1 )
nine_patch_stretch = true

[node name="Timer_Of_Mana" type="Timer" parent="Mana_Heroe"]
autostart = true

[node name="value_of_HP" type="Label" parent="."]
margin_left = -8.0
margin_top = -28.0
margin_right = 20.0
margin_bottom = 3.0
rect_scale = Vector2( 0.5, 0.5 )
text = "150
"
script = ExtResource( 7 )

[node name="value_of_Mana" type="Label" parent="."]
margin_left = -8.0
margin_top = -22.0
margin_right = 32.0
margin_bottom = 9.0
rect_scale = Vector2( 0.5, 0.5 )
text = "550
"

[node name="Camera_Of_Heroe" type="Camera2D" parent="."]
position = Vector2( 18, -85 )
scale = Vector2( 0.496, 0.497 )
zoom = Vector2( 0.5, 0.5 )
drag_margin_left = 0.36
drag_margin_top = 0.37
drag_margin_right = 0.4
drag_margin_bottom = 0.39
script = ExtResource( 23 )

[node name="Buttons_Of_Heroe" type="Sprite" parent="."]
position = Vector2( 248, 28.0001 )
scale = Vector2( 0.2, 0.2 )
z_index = 20
script = ExtResource( 12 )

[node name="Button_First" type="Button" parent="Buttons_Of_Heroe"]
modulate = Color( 0.101961, 0.839216, 0.372549, 1 )
self_modulate = Color( 0.741176, 1, 0.0980392, 1 )
material = SubResource( 11 )
margin_left = -153.226
margin_top = -56.338
margin_right = -46.2258
margin_bottom = -20.338
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 40 )
theme = SubResource( 12 )
text = "First Spell"
script = ExtResource( 1 )

[node name="Arrow_Amount" type="Label" parent="Buttons_Of_Heroe/Button_First"]
margin_left = 117.0
margin_top = 8.0
margin_right = 157.0
margin_bottom = 22.0
script = ExtResource( 13 )

[node name="Button_Second" type="Button" parent="Buttons_Of_Heroe"]
modulate = Color( 0.101961, 0.839216, 0.631373, 1 )
self_modulate = Color( 0.741176, 1, 0.0980392, 1 )
material = SubResource( 13 )
margin_left = -153.226
margin_top = 19.8793
margin_right = -46.2259
margin_bottom = 55.8793
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 40 )
text = "Second Spell"
script = ExtResource( 2 )

[node name="Button_Third" type="Button" parent="Buttons_Of_Heroe"]
modulate = Color( 0.101961, 0.839216, 0.631373, 1 )
self_modulate = Color( 0.741176, 1, 0.0980392, 1 )
material = SubResource( 13 )
margin_left = -153.226
margin_top = 96.3381
margin_right = -46.2259
margin_bottom = 132.338
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 40 )
text = "Third Spell"
script = ExtResource( 3 )

[node name="Control" type="Control" parent="Buttons_Of_Heroe"]
visible = false
margin_left = -1622.98
margin_top = -38.2294
margin_right = -1324.98
margin_bottom = 24.7706
rect_scale = Vector2( 2, 2 )

[node name="Button" type="Button" parent="Buttons_Of_Heroe/Control"]
anchor_right = 1.0
margin_bottom = 30.0
disabled = true
text = "Yes, give him money"

[node name="Button2" type="Button" parent="Buttons_Of_Heroe/Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -32.0
margin_bottom = -2.0
disabled = true
text = "No, let's fight!"

[connection signal="use_move_vector" from="CanvasLayer" to="." method="_on_CanvasLayer_use_move_vector"]
[connection signal="released" from="CanvasLayer/TouchScreenButton" to="CanvasLayer" method="_on_TouchScreenButton_released"]
[connection signal="input_event" from="CanvasLayer/Area_For_Jumping" to="CanvasLayer" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="CanvasLayer/Area_For_Jumping" to="CanvasLayer" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Area_For_Jumping" to="CanvasLayer" method="_on_Area2D_mouse_exited"]
[connection signal="timeout" from="Timer_Of_Hedgehod" to="Weapon" method="_on_Timer_Of_Hedgehod_timeout"]
[connection signal="area_entered" from="Weapon" to="Weapon" method="_on_Weapon_area_entered"]
[connection signal="body_entered" from="Weapon" to="Weapon" method="_on_Weapon_body_entered"]
[connection signal="animation_finished" from="Weapon/AnimationPlayer/Bow_Animation" to="Weapon" method="_on_Bow_Animation_animation_finished"]
[connection signal="timeout" from="Weapon/Timer_Of_Sheld" to="Weapon" method="_on_Timer_Of_Sheld_timeout"]
[connection signal="timeout" from="Weapon/Timer_Of_Sheld/Timer_Of_Stone" to="Weapon" method="_on_Timer_Of_Stone_timeout"]
[connection signal="timeout" from="HP_Heroe/Timer_Of_HP" to="." method="_on_Timer_Of_HP_timeout"]
[connection signal="timeout" from="Mana_Heroe/Timer_Of_Mana" to="." method="_on_Timer_Of_Mana_timeout"]
[connection signal="pressed" from="Buttons_Of_Heroe/Button_First" to="." method="_on_Button_First_pressed"]
[connection signal="pressed" from="Buttons_Of_Heroe/Button_Second" to="." method="_on_Button_Second_pressed"]
[connection signal="pressed" from="Buttons_Of_Heroe/Button_Third" to="." method="_on_Button_Third_pressed"]
[connection signal="pressed" from="Buttons_Of_Heroe/Control/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Buttons_Of_Heroe/Control/Button2" to="." method="_on_Button2_pressed"]
